ci: provenance support

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,7 @@ jobs:
 
       - name: Publish to npm (with provenance)
         working-directory: server
-        run: npm publish --access public
-        # run: npm publish --access public --provenance
+        run: npm publish --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
